fixes full-width image on mobile

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -64,6 +64,10 @@ a.artist, a.artist-event{
 	@media #{$mobile}{
 		width: 100vw;
 		margin-left: -14px;
+		&.pull-right{
+			margin-left: 0;
+			margin-right: -14px;
+		}
 	}
 	@media #{$tablet}{
 		.imready &.left{
